fix: tweak word spacing

--- a/assets/css/extended/text-justify.css
+++ b/assets/css/extended/text-justify.css
@@ -1,7 +1,9 @@
 .post-content p {
   text-align: justify;
   text-justify: inter-word;
+  word-spacing: -0.0625em;
 }
+
 @media (max-width: 600px) {
   .post-content p {
     hyphens: auto;
